# SEGFAULT

./: .env.example  .gitignore  CODEX_TASK_replay_system.md  Dockerfile  Makefile  README.md  REPO_MAP.md  SEGFAULT.md  firebase.json  fly.toml  pyproject.toml  skills.md
.firebase/: hosting.c2VnZmF1bHRcd2Vi.cache
segfault/api/: app.py  models.py  public_docs.py
segfault/common/: config.py  constants.py  types.py
segfault/engine/: drift.py  engine.py  geometry.py  state.py
segfault/lore/: flavor.md
segfault/persist/: base.py  sqlite.py
segfault/tests/: test_broadcast.py  test_collision.py  test_drift.py  test_engine_transfers.py  test_flavor_seed.py  test_geometry.py  test_geometry_los.py  test_replay.py  test_say.py  test_visibility.py
segfault/web/: SKILL.md  adblock.html  ads.txt  ai-plugin.json  donate.html  index.html  privacy.html  process.html  replay.html  spectate.html  spectator-profile.html  spectator-queue.html  spectator.html
segfault/web/.well-known/: agent.json  agents.json
segfault/web/static/: ad-label.js  style.css
